convert movieos->jerakeen and some other cleanup